# CS126FinalProject

./: CMakeLists.txt  README.md
apps/: cinder_simulator_main.cc  console_simulator_main.cc
data/: albedobannerinfo.json  testlimitedfivestarafterloading.txt  testlimitedfourstarafterloading.txt
include/core/: wish_banner.h  wish_item.h
include/visualizer/: button.h  wish_simulator_app.h
src/core/: wish_banner.cc  wish_item.cc
src/visualizer/: button.cc  wish_simulator_app.cc
tests/: wish_banner_test.cc
